Fix wrong margin in RTL in the sidebar
https://bugzilla.gnome.org/show_bug.cgi?id=732194

--- a/data/gnome-maps.css
+++ b/data/gnome-maps.css
@@ -63,6 +63,10 @@
     padding-right: 6px;
 }
 
+#sidebar-form > GtkLabel:dir(rtl) {
+    padding-left: 6px;
+}
+
 #sidebar-form .transportation-mode-button > GtkImage {
     padding-left:   7px;
     padding-right:  7px;
